--- a/styles.css
+++ b/styles.css
@@ -4,33 +4,47 @@
 }
 
 body{
-    background-color:green;
+    background-color: darkcyan;
 }
+
 
 h1{
     color:white;
     filter:drop-shadow(0 0 1rem);
 }
- .domino-list{
-     display:flex;
-     flex-direction: row;
-     flex-wrap:wrap;
-    }
-    
-.domino-list > li {
-    list-style-type: none;
-    font-size: 5rem;
-    transition: transform 1s;
-     }
 
-.domino-list > li:hover {
-    
-  transform: scale(1.5);
+main {
    
+    
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.selected{
-         color:white;
-         filter:drop-shadow(0 0 0.25rem white);
-         
-        }
+main > .domino {
+    list-style-type: none;
+    font-size: 5rem;
+    transition: transform 0.5s;
+    color: rebeccapurple;
+    
+    /* display: none; */
+}
+
+main > .domino:hover {
+    transform: scale(1.5) rotate(0.5turn);
+}
+
+main > .domino.selected {
+    /* display: block; */
+    
+    color: lightcyan;
+    filter: drop-shadow(0 0 0.25rem lightcyan);
+}
+
+
+
+
+
